--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -36,6 +36,6 @@
   </head>
   <body>
     <div id="app" />
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
